Bullet Continuous Collision Detection and Physics Library
Erwin Coumans

2006 Sept 4
	Fixed concave collision bug (caused instability/missing collisions in meshes/compounds)
	Fixed memoryleak in OptimizedBvh, added RayTestSingle to CollisionWorld
	Prepared for VehicleDemo
	Increased Performance (island generation for sleeping objects took too much time)
	Better COLLADA 1.4.1 physics conformance in ColladaDemo

2006 August 11
	Added Quake BspDemo
	Improved CCD for compound and non-convex objects

2006 August 10
	Added per-triangle material (friction/restitution) support for non-convex meshes. See ConcaveDemo for usage.

2006 August 9
	Added CMake support (see http://cmake.org)
	This can autogenerate makefiles, projectfiles cross platform (including MacOS X Xcode )
	Just run cmake . in the root folder and it will autogenerate build files
	
2006 July 26 Erwin Coumans
	Upgraded to COLLADA-DOM 1.4.1, latest SVN version
	ColladaDemo can export snapshots to .dae
	
2006 July 24 Erwin Coumans
	Added Compound CollisionShape support
	(this is still low performance -> requires stackless tree-versus-tree traversal for better performance)

2006 July 15 Erwin Coumans
	Added initial support for Parallel execution (collision detection, constraint solving)
	See ParallelPhysicsEnvironment in Extras\PhysicsInterface\CcdPhysics
	
2006 July 10 Erwin Coumans
	Added MacOS X support (some build issues mainly)
		
2006 July 5 Erwin Coumans
	Improved COLLADA 1.4 physics import, both COLLADA-DOM and FCollada

2006 June 29 Erwin Coumans
	Refactoring of the broadphase
	Moved some optional files to Extras: Algebraic ccd and EPA, quickstep
	Moved the limits on bodies/overlap to 32k and 65k
	
2006 June 25 Erwin Coumans
	Added basic Collision Filtering, during broadphase
	Allow adding meshes to the TriangleIndexVertexArray,
	(input for TriangleMeshShape) 
	Preparation for CompoundShape

2006 June 19 Erwin Coumans
	Added support for COLLADA Physics Import.