@@ -1,3 +1,3 @@
-Bullet Collision Detection and Physics Library version 1.9
+Bullet Collision Detection and Physics Library version 2.0
 http://bullet.sourceforge.net
 
